<resources>
    <string name="app_name">About Me</string>
    <string name="action_settings">Settings</string>
    <string name="button_text">Text</string>
    <string name="dispay_text_activity_text">My name is Gabrielle!</string>
    <string name="button_image">Image</string>
    <string name="button_web">Web</string>
    <string name="button_toast">Toast</string>
    <string name="button_dialog">Dialog</string>
    <string name="title_activity_display_text">DisplayTextActivity</string>
    <string name="title_activity_display_image">DisplayImageActivity</string>
</resources>
