<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="tcss450.uw.edu.aboutme.FirstActivity"
    tools:showIn="@layout/activity_first">

    <Button
        android:layout_width="145dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal|center"
        android:text="@string/button_text"
        android:onClick="displayText" />

    <Button
        android:layout_width="145dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal|center"
        android:text="@string/button_image"
        android:onClick="displayImage" />

    <Button
        android:layout_width="145dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal|center"
        android:text="@string/button_web"
        android:onClick="displayWeb" />

    <Button
        android:layout_width="145dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal|center"
        android:text="@string/button_toast"
        android:onClick="displayToast" />

    <Button
        android:layout_width="145dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal|center"
        android:text="@string/button_dialog"
        android:onClick="displayDialog" />

</LinearLayout>
